# isucon8-revenge-rust

bench/: result.json
webapp/perl/: cpanfile.snapshot
webapp/perl/local/cache/modules/: 02packages.details.txt
webapp/perl/local/lib/perl5/x86_64-linux/: perllocal.pod
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Apache-LogFormat-Compiler-0.35/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/B-Hooks-EndOfScope-0.24/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Canary-Stability-2012/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Class-Accessor-Lite-0.08/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Class-Data-Inheritable-0.08/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Class-Inspector-1.32/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Class-Singleton-1.5/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Cookie-Baker-0.09/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Cookie-Baker-XS-0.09/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Cpanel-JSON-XS-4.10/: MYMETA.json  install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/DBD-mysql-4.046/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/DBI-1.641/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/DBIx-Sunny-0.9991/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/.meta/Data-MessagePack-1.00/: install.json
webapp/perl/local/lib/perl5/x86_64-linux/common/: sense.pm
webapp/rust/: Cargo.toml
webapp/rust/src/: main.rs
(+99 files in other folders)
