[package]
name = "rust"
version = "0.1.0"
authors = ["pokotsun <gorigolila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-session = "0.3.0"

futures = "0.3.1"
env_logger = "0.7"

serde = { version = "1.0", features = [ "derive"] }
sqlx = { version = "0.3", features = [ "mysql", "chrono" ] }
chrono = {version = "0.4", features = ["serde"] }
